v1.5.5
Added charset parameter to case conversion functions - ADDED
Avada compat CSS updated to adjust search button position - FIXED
Filter `geodir_filter_title_variables_location_arr` added to filter the location variables for titles/meta - ADDED
GD category page CPT slug does not change when switching language with WPML - FIXED

v1.5.4
Event after map marker opened extended to prevent FireFox reclosing marker with server side clustering addon - FIXED
Map popup image margins and padding set to 0 !important for compatibility - CHANGED
Bootstrap styles can alter the popular categories count number position - FIXED
Location switcher ajax search not working with accents chars - FIXED
Best of widget Option added to display reviews in excerpt - ADDED
Image gallery lightbox popup image stretches problem with some themes - FIXED
Changed creation of url custom field from varchar 255 to text for longer urls - CHANGED
Yoast SEO is unable to overwrite the home page meta title - FIXED
Map tick box HTML changed for compatibility - CHANGED
New widget added: CPT Categories - ADDED
Default home page map width changed to 100% from 960px - CHANGED
With multi ratings the comment sorting is reversed then selected under settings -> discussion - FIXED
Excerpt more filter now only applied to GD post types - CHANGED
New action "geodir_infowindow_meta_before" added in map marker info window - ADDED
Default category can be set by "default_category" in csv import - CHANGED
Search unable to find listings for a particular keyword in the content - FIXED
New GD Home page created and setting depreciated for overriding normal home page - CHANGED
Email address with .coop TLD not validated - FIXED
Yoast meta title, description & keywords now also works with %location% tag - ADDED
GeoProperty theme compatibility pack - ADDED
Related listing widget does not reset the $post value properly - FIXED
Email subjects and messages can now be translated in .po file if original messages is used - CHANGED