@@ -55,8 +55,12 @@ function geodir_locate_template($template = '')
 					
 				if($sc_post_type != '' )
 					$post_type = $sc_post_type;
+
+                remove_filter( 'home_url', 'geodir_location_geo_home_link',100000);
+                $home_url = get_home_url();
+                add_filter( 'home_url', 'geodir_location_geo_home_link',100000,2 );
 				
-                wp_redirect(trailingslashit(get_site_url()) . $pagename . '/?listing_type=' . $post_type);
+                wp_redirect(trailingslashit($home_url) . $pagename . '/?listing_type=' . $post_type);
                 exit();
             }
             return $template = locate_template(array("geodirectory/add-{$post_type}.php", "geodirectory/add-listing.php"));
