@@ -13,7 +13,9 @@
 global $wp_query, $current_term, $query;
 
 $curr_post_type = geodir_get_current_posttype();
-
+remove_filter( 'home_url', 'geodir_location_geo_home_link',100000);
+$search_url = trailingslashit(get_home_url());
+add_filter( 'home_url', 'geodir_location_geo_home_link',100000,2 );
 ?>
 
 
@@ -25,7 +27,7 @@ $curr_post_type = geodir_get_current_posttype();
  * @param string $class The class for the search form, default: 'geodir-listing-search'.
  */
 echo apply_filters('geodir_search_form_class', 'geodir-listing-search'); ?>"
-      name="geodir-listing-search" action="<?php echo get_site_url(); ?>" method="get">
+      name="geodir-listing-search" action="<?php echo $search_url ?>" method="get">
     <input type="hidden" name="geodir_search" value="1"/>
 
     <div class="geodir-loc-bar">
